# MedAstraX

./: .env.example  .gitignore  README.md  pyproject.toml
backend/: pyproject.toml  requirements-lock.txt
backend/src/hc_analytics/: __init__.py  config.py
backend/src/hc_analytics/api/: __init__.py  app.py  data_access.py
backend/src/hc_analytics/api/routes/: beneficiaries.py  cohort.py  explanations.py  instrumentation.py  language.py  predictions.py
backend/src/hc_analytics/explainability/: __init__.py  __main__.py  bundles.py  constants.py  pipeline.py  shap_engine.py  stability.py
backend/src/hc_analytics/features/: __init__.py  __main__.py  aggregators.py  cohort_summary.py  constants.py  pipeline.py
backend/src/hc_analytics/ingestion/: __init__.py  __main__.py  constants.py  io.py  pipeline.py  transforms.py
backend/src/hc_analytics/instrumentation/: __init__.py  constants.py  context.py  events.py  export.py  store.py
backend/src/hc_analytics/language/: __init__.py  constants.py  grounding.py  models.py  provider.py  query_cache.py  query_executor.py  query_parser.py  summaries.py
backend/src/hc_analytics/modeling/: __init__.py  __main__.py  constants.py  pipeline.py  split.py  trainers.py
backend/src/hc_analytics/schemas/: __init__.py  beneficiary.py  common.py
backend/tests/: test_dashboard_api.py  test_explainability.py  test_features.py  test_grounding.py  test_health.py  test_ingestion.py  test_instrumentation.py  test_language.py  test_modeling.py
docs/: ARCHITECTURE.md  DATA.md
frontend/: README.md  index.html  package-lock.json  (+1 more)
(+26 files in other folders)
