[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hc-analytics"
version = "0.1.0"
description = "Healthcare analytics XAI research prototype"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "pandas>=2.2",
    "pyarrow>=18.0",
    "scikit-learn>=1.5",
    "xgboost>=2.1",
    "shap>=0.46",
    "structlog>=24.4",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "ruff>=0.8",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
hc_analytics = ["py.typed"]
